# xiao-rp2040-chip8-rs

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
