[package]
name = "xiao-rp2040-chip8-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
ssd1306 = "0.7.0"
xiao-rp2040 = { git = "https://github.com/rocasfero/xiao-rp2040-rs", branch = "main" }
